# shadowsocks-haskell

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  README.md  local.hs  server.hs  shadowsocks.cabal  stack.yaml  test.hs
Shadowsocks/: Cipher.hsc  Encrypt.hs  Util.hs
app/: local.hs  server.hs
benchmark/: benchmark.hs  benchmark.py  benchmark.sh
src/Shadowsocks/: Encrypt.hs  Util.hs
