name:                shadowsocks
version:             1.20140713
synopsis:            A fast tunnel proxy that help you get through firewalls
description:
    Shadowsocks implemented in Haskell. Original python version: <https://github.com/clowwindy/shadowsocks>
homepage:            https://github.com/rnons/shadowsocks-haskell
bug-reports:         https://github.com/rnons/shadowsocks-haskell/issues
license:             MIT
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.8.2
data-files:          config.json

source-repository   head
  type:             git
  location:         git://github.com/rnons/shadowsocks-haskell.git

executable sslocal
  main-is:              local.hs
  ghc-options:          -Wall -fno-warn-unused-do-bind -O2 -threaded
  other-modules:        Shadowsocks.Encrypt,
                        Shadowsocks.Util
  other-extensions:     OverloadedStrings, DeriveGeneric
  build-depends:        base == 4.*,
                        aeson >= 0.7,
                        binary >= 0.7,
                        bytestring >= 0.9,
                        containers >= 0.5,
                        cryptohash >= 0.11,
                        HsOpenSSL >= 0.11,
                        network >= 2.4,
                        optparse-applicative >= 0.8,
                        unordered-containers >= 0.2
  default-language:     Haskell2010

executable ssserver
  main-is:              server.hs
  ghc-options:          -Wall -fno-warn-unused-do-bind -O2 -threaded
  other-modules:        Shadowsocks.Encrypt,
                        Shadowsocks.Util
  other-extensions:     OverloadedStrings, DeriveGeneric
  build-depends:        base == 4.*,
                        aeson >= 0.7,
                        binary >= 0.7,
                        bytestring >= 0.9,
                        containers >= 0.5,
                        cryptohash >= 0.11,
                        HsOpenSSL >= 0.11,
                        network >= 2.4,
                        optparse-applicative >= 0.8,
                        unordered-containers >= 0.2
  default-language:     Haskell2010

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  ghc-options:          -Wall -fno-warn-unused-do-bind
  build-depends:        base == 4.*,
                        aeson >= 0.7,
                        binary >= 0.7,
                        bytestring >= 0.9,
                        containers >= 0.5,
                        cryptohash >= 0.11,
                        HsOpenSSL >= 0.11,
                        network >= 2.4,
                        optparse-applicative >= 0.8,
                        process >= 1.1,
                        HUnit >= 1.2,
                        unordered-containers >= 0.2
  default-language:     Haskell2010
