name:                shadowsocks
version:             1.20180408
synopsis:            A fast SOCKS5 proxy that help you get through firewalls
description:
    Shadowsocks implemented in Haskell. Original python version: <https://github.com/clowwindy/shadowsocks>
homepage:            https://github.com/rnons/shadowsocks-haskell
bug-reports:         https://github.com/rnons/shadowsocks-haskell/issues
license:             MIT
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
cabal-version:       1.18
tested-with:         GHC == 8.2.2
data-files:          config.json
extra-doc-files: CHANGELOG.md

source-repository   head
  type:             git
  location:         git://github.com/rnons/shadowsocks-haskell.git

library
  hs-source-dirs:       src
  exposed-modules:      Shadowsocks.Encrypt,
                        Shadowsocks.Util
  build-depends:        base == 4.*,
                        aeson >= 0.7,
                        binary >= 0.7,
                        bytestring >= 0.9,
                        conduit >= 1.3,
                        containers >= 0.5,
                        cryptohash >= 0.11,
                        directory,
                        HsOpenSSL >= 0.11,
                        iproute >= 1.4,
                        network >= 2.6,
                        optparse-applicative >= 0.11,
                        unordered-containers >= 0.2
  default-language:     Haskell2010

executable sslocal
  hs-source-dirs:       app
  main-is:              local.hs
  if os(windows) && arch(x86_64)
    ghc-options:        -Wall -fno-warn-unused-do-bind
  else
    ghc-options:        -Wall -fno-warn-unused-do-bind -threaded
  other-extensions:     OverloadedStrings, DeriveGeneric
  build-depends:        base == 4.*,
                        shadowsocks,
                        async >= 2.0,
                        bytestring >= 0.9,
                        conduit >= 1.3,
                        conduit-extra >= 1.3
  default-language:     Haskell2010

executable ssserver
  hs-source-dirs:       app
  main-is:              server.hs
  if os(windows) && arch(x86_64)
    ghc-options:        -Wall -fno-warn-unused-do-bind
  else
    ghc-options:        -Wall -fno-warn-unused-do-bind -threaded
  other-extensions:     OverloadedStrings, DeriveGeneric
  build-depends:        base == 4.*,
                        shadowsocks,
                        async >= 2.0,
                        bytestring >= 0.9,
                        conduit >= 1.3,
                        conduit-extra >= 1.3,
                        network >= 2.6,
                        streaming-commons >= 0.1.11
  default-language:     Haskell2010

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  ghc-options:          -Wall -fno-warn-unused-do-bind
  build-depends:        base == 4.*,
                        binary >= 0.7,
                        bytestring >= 0.9,
                        containers >= 0.5,
                        cryptohash >= 0.11,
                        process >= 1.1,
                        HUnit >= 1.2
  default-language:     Haskell2010
